--- a/index.html
+++ b/index.html
@@ -1,136 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amigo Secreto</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .container {
-      max-width: 600px;
-      margin-top: 50px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1 class="text-center mb-4">Amigo Secreto</h1>
-    <div class="mb-3">
-      <label for="nameInput" class="form-label">Nome do Participante</label>
-      <input type="text" id="nameInput" class="form-control" placeholder="Digite o nome do participante">
-    </div>
-    <button class="btn btn-primary w-100 mb-3" onclick="addParticipant()">Adicionar Participante</button>
-    <ul class="list-group mb-3" id="participantsList"></ul>
-    <button class="btn btn-success w-100 mb-3" onclick="createDraw()">Criar Sorteio</button>
-    <div id="linksSection" style="display: none;">
-      <h5>Links Gerados:</h5>
-      <ul class="list-group" id="linksList"></ul>
-    </div>
-  </div>
-
-  <script>
-    const participants = [];
-
-    function addParticipant() {
-      const nameInput = document.getElementById('nameInput');
-      const name = nameInput.value.trim();
-      if (name && !participants.includes(name)) {
-        participants.push(name);
-        renderParticipants();
-        nameInput.value = '';
-      } else if (participants.includes(name)) {
-        alert("Esse participante já foi adicionado!");
-      }
-    }
-
-    function renderParticipants() {
-      const list = document.getElementById('participantsList');
-      list.innerHTML = '';
-      participants.forEach(name => {
-        const li = document.createElement('li');
-        li.textContent = name;
-        li.className = 'list-group-item';
-        list.appendChild(li);
-      });
-    }
-
-    function createValidDraw() {
-      let shuffled;
-      let isValid;
-
-      do {
-        shuffled = [...participants].sort(() => Math.random() - 0.5);
-        isValid = true;
-
-        // Verifica se alguém tirou quem o tirou
-        for (let i = 0; i < participants.length; i++) {
-          const giver = shuffled[i];
-          const receiver = shuffled[(i + 1) % shuffled.length];
-          if (participants.indexOf(receiver) === i) {
-            isValid = false;
-            break;
-          }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amigo Secreto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f8f9fa;
         }
-      } while (!isValid);
 
-      return shuffled;
-    }
+        .container {
+            max-width: 600px;
+            margin-top: 50px;
+        }
+    </style>
+</head>
 
-    function createDraw() {
-      if (participants.length < 2) {
-        alert('Adicione pelo menos 2 participantes!');
-        return;
-      }
+<body>
+    <div class="container">
+        <h1 class="text-center mb-4">Amigo Secreto</h1>
+        <div class="mb-3">
+            <label for="nameInput" class="form-label">Nome do Participante</label>
+            <input type="text" id="nameInput" class="form-control" placeholder="Digite o nome do participante">
+        </div>
+        <button class="btn btn-primary w-100 mb-3" onclick="addParticipant()">Adicionar Participante</button>
+        <ul class="list-group mb-3" id="participantsList"></ul>
+        <button class="btn btn-success w-100 mb-3" onclick="createDraw()">Criar Sorteio</button>
+        <div id="linksSection" style="display: none;">
+            <h5>Links Gerados:</h5>
+            <ul class="list-group" id="linksList"></ul>
+        </div>
+    </div>
 
-      const shuffled = createValidDraw();
-      const assignments = shuffled.map((giver, i) => ({
-        giver,
-        receiver: shuffled[(i + 1) % shuffled.length],
-      }));
+    <script>
+        const participants = [];
 
-      const linksList = document.getElementById('linksList');
-      linksList.innerHTML = '';
-      assignments.forEach(({ giver, receiver }) => {
-        // Encode data in Base64
-        const data = btoa(JSON.stringify({ giver, receiver }));
-        const url = `${window.location.origin}${window.location.pathname}?data=${encodeURIComponent(data)}`;
+        function addParticipant() {
+            const nameInput = document.getElementById('nameInput');
+            const name = nameInput.value.trim();
+            if (name && !participants.includes(name)) {
+                participants.push(name);
+                renderParticipants();
+                nameInput.value = '';
+            } else if (participants.includes(name)) {
+                alert("Esse participante já foi adicionado!");
+            }
+        }
 
-        const li = document.createElement('li');
-        li.innerHTML = `<a href="${url}" target="_blank" class="link-primary">${url}</a>`;
-        li.className = 'list-group-item';
-        linksList.appendChild(li);
-      });
+        function renderParticipants() {
+            const list = document.getElementById('participantsList');
+            list.innerHTML = '';
+            participants.forEach(name => {
+                const li = document.createElement('li');
+                li.textContent = name;
+                li.className = 'list-group-item';
+                list.appendChild(li);
+            });
+        }
 
-      document.getElementById('linksSection').style.display = 'block';
-    }
+        function createValidDraw() {
+            let shuffled;
+            let isValid;
 
-    // Decodificação da URL
-    function decodeUrlParams() {
-      const params = new URLSearchParams(window.location.search);
-      const encodedData = params.get('data');
+            do {
+                shuffled = [...participants].sort(() => Math.random() - 0.5);
+                isValid = true;
 
-      if (encodedData) {
-        try {
-          const { giver, receiver } = JSON.parse(atob(encodedData));
-          document.body.innerHTML = `
+                // Verifica se alguém tirou quem o tirou
+                for (let i = 0; i < participants.length; i++) {
+                    const giver = shuffled[i];
+                    const receiver = shuffled[(i + 1) % shuffled.length];
+                    if (participants.indexOf(receiver) === i) {
+                        isValid = false;
+                        break;
+                    }
+                }
+            } while (!isValid);
+
+            return shuffled;
+        }
+
+        function createDraw() {
+            if (participants.length < 2) {
+                alert('Adicione pelo menos 2 participantes!');
+                return;
+            }
+
+            const shuffled = createValidDraw();
+            const assignments = shuffled.map((giver, i) => ({
+                giver,
+                receiver: shuffled[(i + 1) % shuffled.length],
+            }));
+
+            const linksList = document.getElementById('linksList');
+            linksList.innerHTML = '';
+            assignments.forEach(({ giver, receiver }) => {
+                // Encode data in Base64
+                const data = btoa(JSON.stringify({ giver, receiver }));
+                const url = `${window.location.origin}${window.location.pathname}?data=${encodeURIComponent(data)}`;
+
+                const li = document.createElement('li');
+                li.innerHTML = `<b>Envie este link para ${giver}</b><br><a href="${url}" target="_blank" class="link-primary">${url}</a>`;
+                li.className = 'list-group-item';
+                linksList.appendChild(li);
+            });
+
+            for (var i = linksList.children.length; i >= 0; i--) {
+                linksList.appendChild(linksList.children[Math.random() * i | 0]);
+            }
+
+            document.getElementById('linksSection').style.display = 'block';
+        }
+
+        // Decodificação da URL
+        function decodeUrlParams() {
+            const params = new URLSearchParams(window.location.search);
+            const encodedData = params.get('data');
+
+            if (encodedData) {
+                try {
+                    const { giver, receiver } = JSON.parse(atob(encodedData));
+                    document.body.innerHTML = `
             <div class="container text-center">
               <h1>Amigo Secreto</h1>
               <p><strong>${giver}</strong>, você tirou <strong>${receiver}</strong>!</p>
             </div>`;
-        } catch (error) {
-          alert('Dados inválidos! O link pode ter sido adulterado.');
+                } catch (error) {
+                    alert('Dados inválidos! O link pode ter sido adulterado.');
+                }
+            }
         }
-      }
-    }
 
-    // Verifica se a URL contém parâmetros e tenta decodificar
-    if (window.location.search) {
-      decodeUrlParams();
-    }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        // Verifica se a URL contém parâmetros e tenta decodificar
+        if (window.location.search) {
+            decodeUrlParams();
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
