--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -15,6 +15,25 @@
             max-width: 600px;
             margin-top: 50px;
         }
+
+        .copy-btn {
+            cursor: pointer;
+            border: none;
+            background: none;
+            font-size: 18px;
+            margin-left: 10px;
+            color: #007bff;
+        }
+
+        .copy-btn:hover {
+            color: #0056b3;
+        }
+
+        .scrollable-container {
+            max-width: 100%;
+            overflow-x: auto;
+            white-space: nowrap;
+        }
     </style>
 </head>
 
@@ -23,19 +42,31 @@
         <h1 class="text-center mb-4">Amigo Secreto</h1>
         <div class="mb-3">
             <label for="nameInput" class="form-label">Nome do Participante</label>
-            <input type="text" id="nameInput" class="form-control" placeholder="Digite o nome do participante">
+            <input type="text" id="nameInput" class="form-control" placeholder="Digite o nome e pressione Enter">
         </div>
         <button class="btn btn-primary w-100 mb-3" onclick="addParticipant()">Adicionar Participante</button>
         <ul class="list-group mb-3" id="participantsList"></ul>
         <button class="btn btn-success w-100 mb-3" onclick="createDraw()">Criar Sorteio</button>
+
         <div id="linksSection" style="display: none;">
+            <h5>Senhas possíveis:</h5>
+            <p id="passwordsList" class="fw-bold"></p>
             <h5>Links Gerados:</h5>
-            <ul class="list-group" id="linksList"></ul>
+            <div class="scrollable-container">
+                <ul class="list-group" id="linksList"></ul>
+            </div>
         </div>
     </div>
 
     <script>
         const participants = [];
+
+        document.getElementById("nameInput").addEventListener("keypress", function (event) {
+            if (event.key === "Enter") {
+                event.preventDefault();
+                addParticipant();
+            }
+        });
 
         function addParticipant() {
             const nameInput = document.getElementById('nameInput');
@@ -60,25 +91,23 @@
             });
         }
 
+        function generatePasswords(count) {
+            return Array.from({ length: count }, () => Math.floor(1000 + Math.random() * 9000).toString());
+        }
+
         function createValidDraw() {
             let shuffled;
             let isValid;
-
             do {
                 shuffled = [...participants].sort(() => Math.random() - 0.5);
                 isValid = true;
-
-                // Verifica se alguém tirou quem o tirou
                 for (let i = 0; i < participants.length; i++) {
-                    const giver = shuffled[i];
-                    const receiver = shuffled[(i + 1) % shuffled.length];
-                    if (participants.indexOf(receiver) === i) {
+                    if (participants.indexOf(shuffled[(i + 1) % shuffled.length]) === i) {
                         isValid = false;
                         break;
                     }
                 }
             } while (!isValid);
-
             return shuffled;
         }
 
@@ -89,37 +118,61 @@
             }
 
             const shuffled = createValidDraw();
+            const passwords = generatePasswords(participants.length);
             const assignments = shuffled.map((giver, i) => ({
                 giver,
                 receiver: shuffled[(i + 1) % shuffled.length],
             }));
 
+            assignments.forEach(assignment => {
+                let found = assignments.find(a => a.receiver === assignment.giver);
+                assignment.calledBy = found ? found.giver : null;
+            });
+
+            console.log(assignments);
+
             const linksList = document.getElementById('linksList');
             linksList.innerHTML = '';
-            assignments.forEach(({ giver, receiver }) => {
-                // Encode data in Base64
-                const data = btoa(JSON.stringify({ giver, receiver }));
-                const url = `${window.location.origin}${window.location.pathname}?data=${encodeURIComponent(data)}`;
+
+            assignments.forEach(({ giver, receiver, calledBy }) => {
+                const data = btoa(JSON.stringify({ giver, receiver, calledBy, passwords }));
+                const personalUrl = `${window.location.origin}${window.location.pathname}?data=${encodeURIComponent(data)}`;
+                const checkUrl = `${window.location.origin}${window.location.pathname}?check=${encodeURIComponent(data)}`;
 
                 const li = document.createElement('li');
-                li.innerHTML = `<b>Envie este link para ${giver}</b><br><a href="${url}" target="_blank" class="link-primary">${url}</a>`;
                 li.className = 'list-group-item';
+
+                li.innerHTML = `
+          <br>
+          <strong>Para ${giver}:</strong>
+          <div style="display: flex">
+          <input type="text" class="form-control mb-2" value="${personalUrl}" readonly>
+          <button class="copy-btn" onclick="copyToClipboard('${personalUrl}')">📋</button>
+          </div>
+          <strong>Para ver quem tirou ${giver}:</strong>
+          <div style="display: flex">
+          <input type="text" class="form-control" value="${checkUrl}" readonly>
+          <button class="copy-btn" onclick="copyToClipboard('${checkUrl}')">📋</button>
+          </div>
+          <br>
+        `;
+
                 linksList.appendChild(li);
             });
 
-            for (var i = linksList.children.length; i >= 0; i--) {
-                linksList.appendChild(linksList.children[Math.random() * i | 0]);
-            }
-
+            document.getElementById('passwordsList').textContent = passwords.join(', ');
             document.getElementById('linksSection').style.display = 'block';
         }
 
-        // Decodificação da URL
+        function copyToClipboard(text) {
+            navigator.clipboard.writeText(text).then(() => alert("Link copiado!"));
+        }
+
         function decodeUrlParams() {
             const params = new URLSearchParams(window.location.search);
-            const encodedData = params.get('data');
 
-            if (encodedData) {
+            if (params.has('data')) {
+                const encodedData = params.get('data');
                 try {
                     const { giver, receiver } = JSON.parse(atob(encodedData));
                     document.body.innerHTML = `
@@ -131,9 +184,38 @@
                     alert('Dados inválidos! O link pode ter sido adulterado.');
                 }
             }
+
+            if (params.has('check')) {
+                const encodedData = params.get('check');
+                try {
+                    const { giver, receiver, passwords } = JSON.parse(atob(encodedData));
+
+                    document.body.innerHTML = `
+            <div class="container text-center">
+              <h1>Descobrir Quem Tirou Você</h1>
+              <p>Digite uma senha para ver quem tirou <strong>${giver}</strong>:</p>
+              <input type="password" id="passwordInput" class="form-control mb-3" placeholder="Digite a senha">
+              <button class="btn btn-primary" onclick="revealSecret('${encodedData}')">Ver Resultado</button>
+              <p id="resultMessage" class="mt-3 fw-bold"></p>
+            </div>`;
+                } catch (error) {
+                    alert('Dados inválidos! O link pode ter sido adulterado.');
+                }
+            }
         }
 
-        // Verifica se a URL contém parâmetros e tenta decodificar
+        function revealSecret(encodedData) {
+            const passwordInput = document.getElementById('passwordInput').value;
+            const { giver, receiver, calledBy, passwords } = JSON.parse(atob(encodedData));
+
+            if (passwords.includes(passwordInput)) {
+                console.log(JSON.parse(atob(encodedData)))
+                document.getElementById('resultMessage').innerHTML = `Quem tirou <strong>${giver}</strong> foi <strong>${calledBy}</strong>!`;
+            } else {
+                document.getElementById('resultMessage').innerHTML = `<span class="text-danger">Senha incorreta!</span>`;
+            }
+        }
+
         if (window.location.search) {
             decodeUrlParams();
         }
